--- a/GITSHIT/quiz.html
+++ b/GITSHIT/quiz.html
@@ -16,10 +16,10 @@
     <div id="question-container" class="hide">
       <div id="question">Question</div>
       <div id="answer-buttons" class="btn-grid">
-        <button class="btn">Answer 1</button>
-        <button class="btn">Answer 2</button>
-        <button class="btn">Answer 3</button>
-        <button class="btn">Answer 4</button>
+        <button class="btn">Ramil</button>
+        <button class="btn">Rivera</button>
+        <button class="btn">Agpoon</button>
+        <button class="btn">Fabrolina</button>
       </div>
     </div>
     <div class="controls">
